# walrus

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/walrus-engine/: Cargo.toml
crates/walrus-engine/examples/: agent_convergence.rs  agent_life_tui.rs  agent_simulation.rs  convergence_experiment.rs  default_config.toml  emergence_run.rs  evolution_isolation_sweep.rs  evolutionary_map_run.rs  generate_timeline_csvs.rs  sweep_scenarios.rs  visualization_app.rs  visualization_report.rs  world_map_tui.rs
crates/walrus-engine/src/: agents.rs  calibration.rs  ensemble.rs  event_queue.rs  event_sim.rs  evolution.rs  lib.rs
crates/walrus-engine/tests/: regression_baseline.rs  system_feedback.rs
data/benchmarks/: owid_maddison_anchor.csv
docs/: README.md  visual-exploration.md
docs/foundations/: 01_scope-and-goals.md  02_mathematical-foundations.md  03_world-and-laws.md  04_agent-architecture.md  05_superorganism-model.md  06_emergence-rules-and-feedbacks.md  07_pyworld3-integration-notes.md  08_visualization-guidelines.md  09_agent-actor-simulation.md  10_mental-frameworks-and-assumptions.md  11_nasa-world3-handy-integration.md  12_moloch-ai-coordination-framework.md
docs/plans/: 01_project-bootstrap.md  02_mvp-simulator.md  03_scaling-and-performance.md  04_validation-and-science.md  05_open-source-roadmap.md  06_language-and-stack-selection.md  07_calibration-first-validation.md  08_emergent-society-evolution.md  08_moloch-coordination-implementation.md  09_event-driven-migration.md  10_world-map-tui.md
docs/validation/: 01_assumption-validation.md
scripts/: check.sh  generate_snapshots.mjs
src/walrus_sim/: __init__.py  engine.py  (+1 more)
tests/: test_engine.py
