[package]
name = "walrus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "walrus_engine"
path = "src/lib.rs"

[dependencies]
rayon = "1"

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
